# manager-core

./: .gitignore  LICENSE  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0c150ad75857_refactor_models.py  cdf7f399e4ea_initial_migration.py
app/: config.py  database.py  init_db.py  main.py  models.py
app/crud/: __init__.py  obj.py  sbj.py
app/routes/: __init__.py  obj.py  sbj.py
app/schemas/: __init__.py  obj.py  sbj.py
